--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -2,7 +2,13 @@
 
 <layout>
     <data>
-        
+        <variable
+            name="taskViewModel"
+            type="com.example.todolist.ui.TaskViewModel" />
+
+        <variable
+            name="taskListAdapter"
+            type="com.example.todolist.ui.tasklist.TaskListAdapter" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,19 +28,23 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:adapter="@{taskListAdapter}"
+            app:submitList="@{taskViewModel.listPendingTask}"
+            />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
-            android:layout_marginRight="24dp"
             android:layout_marginBottom="24dp"
             android:src="@drawable/ic_add"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:tint="@color/white" />
+            app:tint="@color/white"
+            />
 
         <ImageView
             android:id="@+id/imageViewNoData"
@@ -47,7 +57,6 @@
             app:layout_constraintEnd_toEndOf="@+id/recyclerView"
             app:layout_constraintStart_toStartOf="@+id/recyclerView"
             app:layout_constraintTop_toTopOf="@+id/recyclerView"
-            app:layout_constraintVertical_bias="0.32999998"
             tools:ignore="UseAppTint" />
 
         <TextView
@@ -56,7 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:alpha="0.5"
-            android:text="Ghi chú của bạn sẽ xuất hiện ở đây"
+            android:text="My task"
             android:textColor="@color/app"
             android:textSize="18sp"
             android:visibility="invisible"
