--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="app">#646464</color>
     <color name="white_text">#FFFFFFFF</color>
+    <color name="hint_text">#B6B6B6</color>
     <color name="transparent">#00FFFFFF</color>
 </resources>
