--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin_check_box">8dp</dimen>
-    <dimen name="margin_text_view">8dp</dimen>
-    <dimen name="margin_text_view_large">16dp</dimen>
+    <dimen name="tiny">8dp</dimen>
+    <dimen name="small">16dp</dimen>
+    <dimen name="medium">20dp</dimen>
+    <dimen name="large">32dp</dimen>
+    <dimen name="xlarge">48dp</dimen>
 
 
 
