--- a/app/src/main/res/layout/dialog_add_new_task.xml
+++ b/app/src/main/res/layout/dialog_add_new_task.xml
@@ -1,141 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:id="@+id/dialog_sign_in"
-    >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/xlarge"
-        android:background="@color/purple_500"
-        android:gravity="center"
-        android:paddingle="@dimen/medium"
-        android:text="New Task"
-        android:textColor="@color/white"
-        android:textSize="@dimen/medium"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Title"
-        android:textSize="@dimen/small"
-        android:textColor="@color/black"
-        android:paddingLeft="@dimen/small"
-        android:paddingTop="@dimen/small"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/small"
-        android:paddingRight="@dimen/small"
-        android:textColorHint="@color/hint_text"
-        >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email_text"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/xlarge"
-            android:hint="Do something"
-            android:inputType="textEmailAddress"
-            android:singleLine="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:background="app"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:paddingLeft="@dimen/small"
-        android:paddingTop="@dimen/small"
-        android:textColor="@color/black"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/small"
-        android:paddingRight="@dimen/small"
-        android:textColorHint="#B6B6B6"
-        >
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password_text"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/xlarge"
-            android:hint="Never give up"
-            android:inputType="textPassword"
-            android:singleLine="true"
-            android:focusable="true"
-            android:focusableInTouchMode="true"/>
-    </com.google.android.material.textfield.TextInputLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Deadline"
-        android:paddingLeft="@dimen/small"
-        android:paddingTop="@dimen/small"
-        android:textColor="@color/black"
-        />
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/small"
-        android:paddingRight="@dimen/small"
-        android:textColorHint="#B6B6B6"
-        >
-        <CalendarView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/deadline"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/xlarge"
-        android:hint="Never give up"
-        android:inputType="textPassword"
-        android:singleLine="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-
+<layout>
+    <data>
+        <variable
+            name="taskViewModel"
+            type="com.example.todolist.ui.TaskViewModel" />
+    </data>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:padding="@dimen/medium"
-        android:weightSum="2"
+        android:orientation="vertical"
+        android:id="@+id/dialog_sign_in"
         >
 
-        <Button
-            android:id="@+id/cancel_button"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xlarge"
+            android:background="@color/purple_500"
+            android:gravity="center"
+            android:text="New task"
+            android:textColor="@color/white"
+            android:textSize="20dp"
+            />
+
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cancel"
-            android:textAllCaps="false"
+            android:text="Title"
+            android:textSize="@dimen/small"
+            android:textColor="@color/black"
+            android:paddingLeft="@dimen/medium"
+            android:paddingTop="@dimen/tiny"
+            />
+
+        <EditText
+            android:id="@+id/et_title"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xlarge"
+            android:layout_marginLeft="@dimen/medium"
+            android:layout_marginRight="@dimen/medium"
+            android:hint="Do something"
+            android:textColorHint="#B6B6B6"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:paddingLeft="@dimen/medium"
+            android:paddingTop="@dimen/tiny"
+            android:textColor="@color/black"
+            />
+
+        <EditText
+            android:id="@+id/et_description"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/xlarge"
+            android:layout_marginLeft="@dimen/medium"
+            android:layout_marginRight="@dimen/medium"
+            android:hint="Never give up"
+            android:textColorHint="#B6B6B6"
+            />
+
+        <TextView
+            android:id="@+id/tv_deadline"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/large"
+            android:text="Deadline"
+            android:layout_marginRight="@dimen/medium"
+            android:layout_marginLeft="@dimen/medium"
+            android:layout_marginTop="@dimen/tiny"
+            android:paddingLeft="@dimen/tiny"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_rounded_corner"
+            android:gravity="center_vertical"
+            />
+
+        <CalendarView
+            android:id="@+id/calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/small"
             android:layout_marginRight="@dimen/small"
+            android:visibility="visible"
             />
 
-        <Button
-            android:id="@+id/sign_in_button"
-            android:layout_weight="1"
-            android:layout_width="0dp"
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Save"
-            android:textAllCaps="false"
-            />
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="@dimen/medium"
+            android:weightSum="2"
+            >
+
+            <TextView
+                android:id="@+id/bt_cancel"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/large"
+                android:text="Cancel"
+                android:textAllCaps="false"
+                android:layout_marginRight="@dimen/small"
+                android:background="@drawable/bg_rounded_corner"
+                android:textColor="@color/white"
+                android:gravity="center"
+
+                />
+
+            <TextView
+                android:id="@+id/bt_save"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/large"
+                android:text="Save"
+                android:textAllCaps="false"
+                android:background="@drawable/bg_rounded_corner"
+                android:textColor="@color/white"
+                android:gravity="center"
+
+                />
 
 
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+
+
+</layout>
+
