--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/deletedListFragment"
-        android:name="com.example.todolist.ui.DeletedListFragment"
+        android:name="com.example.todolist.ui.deleted.DeletedListFragment"
         android:label="Deleted list"
         tools:layout="@layout/fragment_deleted_list" />
 
