--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,9 +6,9 @@
     </style>
 
     <style name="check_box">
-        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_width">30dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:layout_margin">@dimen/margin_check_box</item>
+        <item name="android:layout_margin">@dimen/medium</item>
     </style>
 
 </resources>
