--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.tasklist.TaskListFragment"
-        android:background="@color/white"
+        android:background="#E6E6E6"
         >
 
         <androidx.recyclerview.widget.RecyclerView
