--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="xxtiny">2dp</dimen>
+    <dimen name="xtiny">4dp</dimen>
     <dimen name="tiny">8dp</dimen>
     <dimen name="small">16dp</dimen>
     <dimen name="medium">20dp</dimen>
